teraz juz napewno koniec

--- a/3/technologie.tex
+++ b/3/technologie.tex
@@ -236,28 +236,28 @@ Parametr key=INSERT-YOUR-KEY służy korporacji do indentyfikowania usługobiorc
 
 \section{OCR Web Service}
 OCR Web Service jest to jeden z najpopularniejszych web serwisów tego rodzaju. Rozpoznaje aż dwadzieścia osiem języków między innymi:
-\begin{item}
+\begin{itemize}
 	\item polski
 	\item angielski
 	\item niemiecki
 	\item francuski
 	\item portugalski
-\end{item}
+\end{itemize}
 Przyjmuje różne formaty wejściowe, takie jak:
-\begin{item}
-	\item JPEG\JPG
+\begin{itemize}
+	\item JPEG\\JPG
 	\item BMP
 	\item PCX
 	\item GIF
 	\item PNG
-	\PDF
-\end{item}
+	\item PDF
+\end{itemize}
 Co więcej pozwala na przekonwertowanie rozpoznanego tekstu na aż sześć różnych formatów:
-\begin{item}
+\begin{itemize}
 	\item Adobe PDF
 	\item MS Word 2003
 	\item MS Excel 2003
 	\item HTML
 	\item RTF
-\end{item}
+\end{itemize}
 Oczywiście istnieje też możliwość otrzymania zwykłego pliku txt. Wymagania tego serwisu co do jakości obrazu w pliku otrzymanym na wejściu też nie są duże, zaleca się aby rozdzielczość wynosiła między 200 a 400 dpi. Web serwis ten jako protokół komunikacyjny wykorzystuje SOAP w wersji 1.1 lub 1.2. WSDL potrzebny do wygenerowania szkieletu kodu można pobrać ze strony projektu. Jedną z niewielu wad tego serwisu jest to, że podobnie jak Google Translate jest płatny. 
