--- a/thesis.tex
+++ b/thesis.tex
@@ -234,4 +234,36 @@ Kraków, 2012
 
 \listoftables  % print list of tables
 
+\appendix
+\chapter{XML Schema dla pliku konfiguracyjnego}
+\begin{lstlisting}
+<?xml version="1.0" encoding="utf-8"?>
+<xs:schema elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema">
+	<xs:element name="speechProcessingInstructions">
+		<xs:complexType>
+			<xs:sequence>
+				<xs:element name="readImage" type="xs:string" default="" minOccurs="0"/>
+				<xs:element name="identifyLanguage" type="xs:string" default="" minOccurs="0"/>
+				<xs:element name="translate" minOccurs="0">
+					<xs:complexType>
+						<xs:sequence>
+							<xs:element name="inputLanguage" type="xs:string" default="polish" minOccurs="0" />
+							<xs:element name="outputLanguage" type="xs:string" default="polish"/>
+						<xs:sequence>
+					</xs:complexType>
+				</xs:element>
+				<xs:element name="performTTS" type="languageInfo" minOccurs="0"/>
+				<xs:element name="performASR" type="languageInfo" minOccurs="0"/>
+			</xs:sequence>
+		</xs:complexType>
+	</xs:element>
+			
+	<xs:complexType name="languageInfo">
+		<xs:sequence>
+			<xs:element name="language" type="xs:string"/>
+		</xs:sequence>
+	</xs:complexType>
+	
+</xs:schema>
+\end{lstlisting}
 \end{document}
