--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -87,6 +87,19 @@
 	publisher = "Addison-Wesley"
 }
 
+@book{gamma1995,
+	author = "Erich Gamma, Richard Helm, Ralph Johnson, John M. Vlissides",
+	title ="Design Patterns: Elements of Reusable Object-Oriented Software",
+	year = 1995,
+	publisher = "Addison-Wesley"
+}
+
+@misc{jaxb2008, 
+	title = "JAXB homepage",
+	howpublished = "\url{http://http://jaxb.java.net}",
+	year = 2008
+}
+
 @misc{eaipatterns, 
 	title = "EIP Patterns homepage",
 	howpublished = "\url{http://www.eaipatterns.com/toc.html}",
