--- a/thesis.tex
+++ b/thesis.tex
@@ -71,6 +71,8 @@
 \renewcommand\baselinestretch{1.2}
 \baselineskip=18pt plus1pt
 
+\renewcommand*{\lstlistingname}{Fragment kodu}
+
 
 %: ----------------------- generate cover page ------------------------
 
@@ -230,8 +232,10 @@ Kraków, 2012
 %: ----------------------- list of figures/tables ------------------------
 
 \listoffigures	% print list of figures
+\renewcommand*{\lstlistlistingname}{Spis fragmentów kodu}
+\lstlistoflistings
 
-\listoftables  % print list of tables
+%\listoftables  % print list of tables
 
 \appendix
 \chapter{XML Schema dla pliku konfiguracyjnego}
