--- a/thesis.tex
+++ b/thesis.tex
@@ -171,8 +171,7 @@ Kraków, 2012
 %\include{5/projects_implementations}
 \include{6/projekt_i_implementacja}
 
-
-%\include{7/discussion}               % discussion of results
+\include{7/discussion}               % discussion of results
 
 %\include{8/materials_methods}        % description of lab methods
 
